example/proxy/envoy.yaml
static_resources:
    listeners:
        - address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 8080
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: AUTO
                          stat_prefix: ingress_http
                          access_log:
                              - name: envoy.access_loggers.stdout
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: backend
                                    domains:
                                        - '*'
                                    routes:
                                        - match:
                                              prefix: '/'
                                              grpc: {}
                                          route:
                                              cluster: backend_grpc_service
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: backend_grpc_service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          typed_extension_protocol_options:
              envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                  '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                  explicit_http_config:
                      http2_protocol_options: {}
          load_assignment:
              cluster_name: backend_grpc_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: server
                                      port_value: 50051
